tolk-tester/tests/invalid-syntax/err-3480.tolk
import "dir/"

/**
@compilation_should_fail
@stderr import path must specify a file, not a directory
 */
